--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="css/weather-icons.css">
 	<link rel="stylesheet" href="css/weather-icons-wind.css">
 	<link rel="stylesheet" href="css/main.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
 	<!-- Container div, to set basic settings in css -->
