--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Weather App</title>
-	<link rel="stylesheet" href="css/weather-icons.css">
-	<link rel="stylesheet" href="css/weather-icons-wind.css">
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/script.js"></script>
@@ -14,27 +13,30 @@
 	<div class="container">
 		<!-- Header div, contains title -->
 		<div class="header">
-			<h1>Local Weather<i class="wi wi-day-cloudy"></i></h1>
-			<h4><i>Free Code Camp Front End Certification</i></h4>
+			<h1 class="title">Local Weather</h1>
+			<h4 class="fcc"><i>Free Code Camp</i></h4>
 		</div>
 		<!-- Weather div, shows location, weather info and weather image -->
 		<div class="weather">
 		</div>
 		<!-- Footer section, shows author's information an credits. -->
+		<hr/>
 		<div class="footer">
 			<!-- Author's colomn of the footer -->
 			<div class="author">
 				<p>Page by Amer Hamdan</p>
-				<p><a href="https://github.com/amashamdan" target="blank">Github</a></p>
-				<p><a href="https://www.linkedin.com/in/amerhamdan" target="blank">Linkedin</a></p>
-				<p><a href="http://codepen.io/amashamdan/" target="blank">CodePen</a></p>
-				<p><a href="http://amashamdan.github.io/P1-portfolio/" target="blank">Portfolio</a></p>
-				<p><a href="https://www.freecodecamp.com/amashamdan" target="blank">Free Code Camp</a></p>
+				<p>Visit my pages:</p>
+				<ul class="pages">
+					<li><p><a href="http://amashamdan.github.io/P1-portfolio/" target="blank">Portfolio</a></p></li>
+					<li><p><a href="https://github.com/amashamdan" target="blank">Github</a></p></li>
+					<li><p><a href="http://codepen.io/amashamdan/" target="blank">CodePen</a></p></li>
+					<li><p><a href="https://www.linkedin.com/in/amerhamdan" target="blank">Linkedin</a></p></li>
+				</ul>
 			</div>
 			<!-- Credits colomn of the footer -->
 			<div class="credits">
 				<p>Weather provided by <a href="http://openweathermap.org/" target="blank">Open Weather.</a></p>
-				<p>Weather icons provided by <a href="https://erikflowers.github.io/weather-icons/" target="blank">Erik Flower's Weather Icons</a></p>
+				<p>Weather icons provided by <a href="http://findicons.com/pack/2607/tick_weather_icons" target="blank">FindIcons</a></p>
 			</div>
 		</div>
 	</div>
