--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery.min.js"></script>
+	<!-- maxmind.com is a geolocation service API used to find the user's location. -->
+	<script type="text/javascript" src="http://js.maxmind.com/js/apis/geoip2/v2.1/geoip2.js"></script>
 	<script src="js/script.js"></script>
 </head>
 <body>
