Feat: A button is added to change units.
The Change Button changes the unit from celcius to fahrenheit and vice vers once clicked.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		</div>
 		<!-- Weather div, shows location, weather info and weather image -->
 		<div class="weather">
+			<div class="button-div">
+				<button class="unit-button">Change Unit</button>
+			</div>
 		</div>
 		<!-- Footer section, shows author's information an credits. -->
 		<hr/>
