--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
+	<!-- The is a div with a loading message which is displayed until the page
+	is fully loaded and populated with weather information -->
+	<div class="loading">Loading Weather Information...</div>
 	<!-- Container div, to set basic settings in css -->
 	<div class="container">
 		<!-- Header div, contains title -->
